--- a/sway-contracts/Forc.toml
+++ b/sway-contracts/Forc.toml
@@ -5,3 +5,6 @@ license = "Apache-2.0"
 name = "test-contract"
 
 [dependencies]
+src_20 = { git = "https://github.com/FuelLabs/sway-standards", tag = "v0.1.2" }
+src_3 = { git = "https://github.com/FuelLabs/sway-standards", tag = "v0.1.2" }
+token = { git = "https://github.com/FuelLabs/sway-libs", tag = "v0.15.0" }
